--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 			let container;
-			let camera, scene, renderer;
+			let camera, scene, renderer, controls;
 			let controller;
 
 			let reticle, pmremGenerator, current_object;
@@ -70,7 +70,7 @@
 										scene.add(current_object);
 
 										render();
-								})
+								});
 						});
 			}
 
@@ -94,8 +94,17 @@
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				renderer.xr.enabled = true;
 				container.appendChild( renderer.domElement );
-
+				
+				pmremGenerator = new THREE.pmremGenerator(renderer);
+				pmremGenerator.compileEquirectangularShader();
 				//
+				controls = new OrbitControls(camera, renderer.domElement);
+				controls.addEventListener('change', render);
+				controls.minDistance = 2;
+				controls.maxDistance = 10;
+				controls.target.set(0, 0, -0.2);
+				
+
 
 				document.body.appendChild( ARButton.createButton( renderer, { requiredFeatures: [ 'hit-test' ] } ) );
 
